// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`inputWrapper > should render correctly 1`] = `
"<div class="flex flex-col gap-1">
  <!--v-if-->
  <div class="border-border has-focus-visible:ring-offset-background has-focus-visible:ring-ring text-foreground has-focus-visible:outline-none has-focus-visible:ring-2 flex min-h-[32px] flex-wrap items-center gap-1 rounded-md border p-1 text-base ring-offset-1 transition duration-200 ease-out disabled:pointer-events-none disabled:opacity-75"></div>
  <!--v-if-->
</div>"
`;

exports[`inputWrapper > should render correctly when disabled 1`] = `
"<div class="flex flex-col gap-1 opacity-60">
  <!--v-if-->
  <div class="border-border has-focus-visible:ring-offset-background has-focus-visible:ring-ring text-foreground has-focus-visible:outline-none has-focus-visible:ring-2 flex min-h-[32px] flex-wrap items-center gap-1 rounded-md border p-1 text-base ring-offset-1 transition duration-200 ease-out disabled:pointer-events-none disabled:opacity-75 bg-muted/80 pointer-events-none"></div>
  <!--v-if-->
</div>"
`;

exports[`inputWrapper > should render correctly when hasError with errorMessage 1`] = `
"<div class="flex flex-col gap-1">
  <!--v-if-->
  <div class="border-border has-focus-visible:ring-offset-background has-focus-visible:ring-ring text-foreground has-focus-visible:outline-none has-focus-visible:ring-2 flex min-h-[32px] flex-wrap items-center gap-1 rounded-md border p-1 text-base ring-offset-1 transition duration-200 ease-out disabled:pointer-events-none disabled:opacity-75 border-destructive bg-destructive/5 dark:bg-destructive/10 ring-destructive!"></div>
  <p class="text-destructive dark:brightness-150">mockErrorMessage</p>
</div>"
`;

exports[`inputWrapper > should render correctly with labe 1`] = `
"<div class="flex flex-col gap-1"><span class="text-foreground">mockLabel</span>
  <div class="border-border has-focus-visible:ring-offset-background has-focus-visible:ring-ring text-foreground has-focus-visible:outline-none has-focus-visible:ring-2 flex min-h-[32px] flex-wrap items-center gap-1 rounded-md border p-1 text-base ring-offset-1 transition duration-200 ease-out disabled:pointer-events-none disabled:opacity-75"></div>
  <!--v-if-->
</div>"
`;
